GCW-353 fixed plus-icon click event issue on ios-devise

--- a/app/styles/templates/_review_item.scss
+++ b/app/styles/templates/_review_item.scss
@@ -32,13 +32,19 @@
   }
 }
 
-.icon-center {
-  .fa-plus-circle {
-    @media #{$small-only} {
-      font-size: 1.35rem;
-      padding: 0;
-      margin-right: -0.6rem;
-      display: inline;
+.accept_widget {
+  i, .add_package_link {
+    cursor: pointer;
+  }
+
+  .icon-center {
+    .fa-plus-circle {
+      @media #{$small-only} {
+        font-size: 1.35rem;
+        padding: 0;
+        margin-right: -0.6rem;
+        display: inline;
+      }
     }
   }
 }
